not-in-use-java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
spec:
  replicas: 2
  selector:
    matchLabels:     
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: javamysqlapp
          image: santana20095/demo-java-app:1.1
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
