phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: my-java-app.com
    http:
      paths:
      - backend:
          service:
            name: java-app-service
            port: 
              number: 8080
        pathType: Prefix
        path: /
  - host: phpmy-admin.com
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin-service
            port: 
              number: 8081
        pathType: Prefix
        path: /
